# MailFluent

./: .gitignore  com.crosine.MailFluent.json  com.crosine.MailFluent.yaml  meson.build
aux/gnome-builder/: com.crosine.MailFluent.json
data/: com.crosine.MailFluent.appdata.xml.in  com.crosine.MailFluent.desktop.in  com.crosine.MailFluent.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
prototypes/: thread_item_01.blp  thread_item_02.blp  thread_item_02_global.css  window_001.blp  window_002.blp  window_003.blp
src/: .gitignore  Application.vala  Config.vala  Config.vala.in  Main.vala  MainPane.vala  MainWindow.vala  SideBar.vala  main.vala  meson.build  window.ui.bkp
src/main_pane/: ThreadPane.vala  meson.build
styles.BKP/: com.crosine.MailFluent.styles.gresource.xml  main.css  meson.build
subprojects/: .gitignore
ui/: MainPane.blp  MainWindow.blp  SideBar.blp  com.crosine.MailFluent.UI.gresource.xml  mailfluent.ui.gresource.xml  meson.build
ui/main_pane/: ThreadPane.blp
